--- a/src/pages/heath/heath.css
+++ b/src/pages/heath/heath.css
@@ -1,7 +1,10 @@
+.body {
+
+}
 .heathIntro p{
     font-size: 28px;
     padding: 24px;
-    background-color: #01877e;
+    background-color: #7fd6d0;
     align-self:center;
     text-align: center;
     border-radius: 20px;
@@ -68,6 +71,7 @@ body span{
     background-color: #ffb0a9;
     border-radius: 10px;
     line-height: 300%;
+    padding: 90px;
 }
 .food >table{
     border-collapse: collapse;
@@ -100,6 +104,8 @@ body span{
     background-color: #f9d678;
     border-radius: 10px;
     line-height: 300%;
+    padding: 90px;
+
 }
 .life table
 {
@@ -120,6 +126,7 @@ body span{
     width: 35%;
     border-radius: 10px;
     float: left;
+    height: 600px;
 }
 .dietMeal >p{
     padding: 15px;
@@ -129,6 +136,7 @@ body span{
 }
 .living{
     display: flex;
+
 }
 .living >img{
     float: left;
@@ -147,6 +155,7 @@ body span{
     background-color: #b6ddda;
     border-radius: 10px;
     line-height: 300%;
+    padding: 90px;
 }
 
 .workout img{
